add option --enable-preview for test