@@ -21,6 +21,7 @@ dependencies {
 
 test {
   useJUnitPlatform()
+  jvmArgs('--enable-preview')
 }
 
 application {
